@@ -44,8 +44,6 @@ The following exceptions can be used when writing custom devices:
 
 .. autoexception:: HardwareError()
 
-.. autoexception:: FixedError()
-
 .. autoexception:: CacheLockError()
 
 
