@@ -84,6 +84,9 @@ Changelog for NICOS 2
 
   - Added new "appendscan()" command to quickly append to the last scan.
 
+  - Fixed devices now don't raise an exception on moving, but only warn that
+    they will not move.
+
 **Release 2.0.1**
 
   - In "ImageStorage", made sure the data file isn't overwritten unless
